--- a/.github/workflows/sdks.yml
+++ b/.github/workflows/sdks.yml
@@ -177,7 +177,12 @@ jobs:
         run: rmf-codegen diff -f ${{ matrix.diffFormat }} -o ./changes_api.md commercetools-api-reference-previous/api-specs/api/api.raml commercetools-api-reference/api-specs/api/api.raml
 
       - name: "Calculate diff (Import API)"
+        continue-on-error: true
         run: rmf-codegen diff -f ${{ matrix.diffFormat }} -o ./changes_import.md commercetools-api-reference-previous/api-specs/import/api.raml commercetools-api-reference/api-specs/import/api.raml
+
+      - name: "Calculate diff (Import API)"
+        continue-on-error: true
+        run: rmf-codegen diff -f ${{ matrix.diffFormat }} -o ./changes_import.md commercetools-api-reference-previous/api-specs/importapi/api.raml commercetools-api-reference/api-specs/import/api.raml
 
       - name: "Calculate diff (History)"
         run: rmf-codegen diff -f ${{ matrix.diffFormat }} -o ./changes_history.md commercetools-api-reference-previous/api-specs/history/api.raml commercetools-api-reference/api-specs/history/api.raml
