change to org secret

--- a/.github/workflows/sdk-postman.yml
+++ b/.github/workflows/sdk-postman.yml
@@ -57,8 +57,8 @@ jobs:
         id: generate_github_token
         uses: actions/create-github-app-token@v1
         with:
-          app-id: ${{ secrets.SDK_APP_ID }}
-          private-key: ${{ secrets.SDK_APP_PEM }}
+          app-id: ${{ secrets.CT_SDKS_APP_ID }}
+          private-key: ${{ secrets.CT_SDKS_APP_PEM }}
           owner: ${{ github.repository_owner }}
 
       - name: Get App user
