minify api postman collection

--- a/.github/workflows/sdk-postman.yml
+++ b/.github/workflows/sdk-postman.yml
@@ -97,6 +97,12 @@ jobs:
           RAML_FILE: "../commercetools-api-reference/api-specs/api/postman.raml"
           LIB_NAME: "api"
 
+      - name: Minify Api postman collection
+        working-directory: postman
+        run: |-
+          jq -r tostring api/collection.json > api/minified.json
+          mv api/minified.json api/collection.json
+
       - name: "Generate importapi postman collection"
         run: sudo chmod 777 /usr/local/bin && make build
         working-directory: postman
