disable separate postman step

--- a/.github/workflows/sdk-postman.yml
+++ b/.github/workflows/sdk-postman.yml
@@ -1,7 +1,7 @@
 on:
-  push:
-    paths:
-      - 'api-specs/**'
+#  push:
+#    paths:
+#      - 'api-specs/**'
   workflow_dispatch:
 
 name: "SDK Generator Postman"
