fix postman build

--- a/.github/workflows/sdks.yml
+++ b/.github/workflows/sdks.yml
@@ -154,7 +154,7 @@ jobs:
           HISTORY_RAML: "../commercetools-api-reference/api-specs/history/api.raml"
 
       - name: "Generate postman collections"
-        if: ${{ matrix.language != 'postman' }}
+        if: ${{ matrix.language == 'postman' }}
         working-directory: commercetools-sdk
         run: |-
           sudo chmod 777 /usr/local/bin
