fix postman build

--- a/.github/workflows/sdks.yml
+++ b/.github/workflows/sdks.yml
@@ -43,6 +43,7 @@ jobs:
             diffFormat: PHP_MARKDOWN
           - language: postman
             repository: 'commercetools/commercetools-postman-collection'
+            diffFormat: MARKDOWN
     steps:
         # Get GitHub token via the CT SDKs App
       - name: Generate GitHub token (via CT SDKs App)
