Ignore custom environments in bruno

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,7 @@ build
 composer.lock
 tmpdoc
 gen.properties
+
+/bruno/api/environments/*
+!/bruno/api/environments/DotEnv.bru
+!/bruno/api/environments/Example.bru
