Ignore environments for all bruno api refs

--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,6 @@ composer.lock
 tmpdoc
 gen.properties
 
-/bruno/api/environments/*
-!/bruno/api/environments/DotEnv.bru
-!/bruno/api/environments/Example.bru
+/bruno/*/environments/*
+!/bruno/*/environments/DotEnv.bru
+!/bruno/*/environments/Example.bru
