Ignore custom environments in bruno (#289)
* Ignore custom environments in bruno

* Ignore environments for all bruno api refs

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,7 @@ build
 composer.lock
 tmpdoc
 gen.properties
+
+/bruno/*/environments/*
+!/bruno/*/environments/DotEnv.bru
+!/bruno/*/environments/Example.bru
