--- a/.github/workflows/sdks.yml
+++ b/.github/workflows/sdks.yml
@@ -268,6 +268,7 @@ jobs:
           commit_author: ct-sdks[bot] <${{ steps.get_app_user.outputs.email }}>
           commit_user_name: ct-sdks[bot]
           commit_user_email: ${{ steps.get_app_user.outputs.email }}
+          file_pattern: '. :!composer.json'
 
       - uses: stefanzweifel/git-auto-commit-action@v4
         if: ${{ matrix.language == 'postman' && env.CHANGES_PENDING != '0'  && github.ref == 'refs/heads/main' }}
