--- a/.github/workflows/sdks.yml
+++ b/.github/workflows/sdks.yml
@@ -289,3 +289,4 @@ jobs:
           commit_author: ct-sdks[bot] <${{ steps.get_app_user.outputs.email }}>
           commit_user_name: ct-sdks[bot]
           commit_user_email: ${{ steps.get_app_user.outputs.email }}
+          file_pattern: '. :!composer.json'
