--- a/.github/workflows/sdks.yml
+++ b/.github/workflows/sdks.yml
@@ -153,6 +153,7 @@ jobs:
           IMPORT_RAML: "../commercetools-api-reference/api-specs/import/api.raml"
           ML_RAML: "../commercetools-api-reference/api-specs/ml/api.raml"
           HISTORY_RAML: "../commercetools-api-reference/api-specs/history/api.raml"
+          CHECKOUT_RAML: "../commercetools-api-reference/api-specs/checkout/api.raml"
 
       - name: "Generate postman collections"
         if: ${{ matrix.language == 'postman' }}
