--- a/.github/workflows/sdks.yml
+++ b/.github/workflows/sdks.yml
@@ -164,6 +164,7 @@ jobs:
           make RAML_FILE=../commercetools-api-reference/api-specs/api/postman.raml LIB_NAME=api build
           make RAML_FILE=../commercetools-api-reference/api-specs/import/api.raml LIB_NAME=import build
           make RAML_FILE=../commercetools-api-reference/api-specs/connect/api.raml LIB_NAME=connect build
+          make RAML_FILE=../commercetools-api-reference/api-specs/checkout/api.raml LIB_NAME=checkout build
           jq -r tostring api/collection.json > api/minified.json
           mv api/minified.json api/collection.json
 
